@@ -22,8 +22,6 @@
 package io.goobi.viewer.managedbeans;
 
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -52,8 +50,6 @@ import io.goobi.viewer.exceptions.PresentationException;
 import io.goobi.viewer.exceptions.ViewerConfigurationException;
 import io.goobi.viewer.managedbeans.utils.BeanUtils;
 import io.goobi.viewer.messages.ViewerResourceBundle;
-import io.goobi.viewer.model.citation.CitationLink;
-import io.goobi.viewer.model.citation.CitationLink.CitationLinkLevel;
 import io.goobi.viewer.model.job.download.DownloadOption;
 import io.goobi.viewer.model.maps.GeoMapMarker;
 import io.goobi.viewer.model.metadata.Metadata;
@@ -968,7 +964,7 @@ public class ConfigurationBean implements Serializable {
     public boolean isShowSearchInItem() {
         return DataManager.getInstance().getConfiguration().isSearchInItemEnabled();
     }
-    
+
     /**
      * <p>
      * isShowSearchInItemOnlyIfFullTextAvailable.
@@ -1241,6 +1237,14 @@ public class ConfigurationBean implements Serializable {
     }
 
     /**
+     * 
+     * @return a boolean.
+     */
+    public boolean isPullThemeEnabled() {
+        return DataManager.getInstance().getConfiguration().isPullThemeEnabled();
+    }
+
+    /**
      * <p>
      * getTwitterName.
      * </p>
@@ -1370,14 +1374,6 @@ public class ConfigurationBean implements Serializable {
     }
 
     /**
-     * 
-     * @return Configured value
-     */
-    public boolean isArchivesEnabled() {
-        return DataManager.getInstance().getConfiguration().isArchivesEnabled();
-    }
-
-    /**
      * @param field
      * @return Configured value
      */
@@ -1405,7 +1401,7 @@ public class ConfigurationBean implements Serializable {
                 .getSearchResultGroups()
                 .stream()
                 .map(SearchResultGroup::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1538,7 +1534,7 @@ public class ConfigurationBean implements Serializable {
             List<LabeledValue> translatedValues = entry.getValue()
                     .stream()
                     .map(v -> new LabeledValue(v.getValue(), ViewerResourceBundle.getTranslation(v.getLabel(), locale), v.getStyleClass()))
-                    .collect(Collectors.toList());
+                    .toList();
             translatedMap.put(entry.getKey(), translatedValues);
 
         }
@@ -1551,7 +1547,7 @@ public class ConfigurationBean implements Serializable {
                 .getGeomapFeatureTitleOptions()
                 .stream()
                 .map(item -> new SelectItem(item.getValue(), ViewerResourceBundle.getTranslation(item.getLabel(), BeanUtils.getLocale())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Metadata> getMetadataConfiguration(String type) {
